tests/error/inout_errors/subscript_not_setable.err
Error: Not able to borrow subscripted elements (at $FILE:19:8)
   | 
17 | @guppy
18 | def test(c: MyImmutableContainer) -> MyImmutableContainer:
19 |     foo(c[0])
   |         ^^^^ Expression of type `MyImmutableContainer` is not able to
   |              borrow subscripted elements

Help: Implement missing method: `__setitem__: (MyImmutableContainer, int, qubit
@owned) -> None`

Guppy compilation failed due to 1 previous error
